--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -14,3 +14,6 @@ $color-purple-light: #886be7;
 $color-purple: #7759e7;
 $color-purple-darker: #664de7;
 $color-purple-darkest: #412ebd;
+
+$text-gray-600: #8a8a8a;
+$text-gray-900: #262626;
