--- a/src/app/shared/components/dialogs/dialog/dialog.component.html
+++ b/src/app/shared/components/dialogs/dialog/dialog.component.html
@@ -1,24 +1,27 @@
-<div *ngIf="show" class="modal d-block" tabindex="-1" role="dialog">
-  <div class="modal-dialog custom-alert {{ additionalCss }}" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 *ngIf="header" class="modal-title">{{ header }}</h5>
+<div *ngIf="show" class="fixed inset-0 z-50 overflow-y-auto bg-black bg-opacity-60 block" tabindex="-1" role="dialog">
+  <div class="relative mx-auto my-8 max-w-lg custom-alert {{ additionalCss }}" role="document">
+    <div class="bg-white rounded-lg shadow-xl">
+      <div class="flex items-center justify-between p-4 border-b">
+        <h5 *ngIf="header" class="text-xl font-semibold">{{ header }}</h5>
         <button
           type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
+          class="text-gray-400 hover:text-gray-600 focus:outline-none"
           aria-label="Close"
           (click)="close()"
-        ></button>
+        >
+          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
 
-      <div class="modal-body">
+      <div class="p-4">
         <div class="p-1">
           <ng-content></ng-content>
         </div>
 
         <div class="p-1 confirm-button">
-          <button class="btn btn-outline-secondary" (click)="close()">
+          <button class="border border-gray-400 text-gray-700 px-4 py-2 rounded hover:bg-gray-100" (click)="close()">
             Close
           </button>
         </div>
