--- a/src/app/shared/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,30 +1,33 @@
 <div
   *ngIf="showModal"
-  class="modal fade show d-block"
+  class="fixed inset-0 z-50 overflow-y-auto bg-black bg-opacity-60 block transition-opacity duration-300"
   tabindex="-1"
   aria-hidden="true"
 >
-  <div class="modal-dialog custom-alert">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">{{ message?.subject }}</h5>
+  <div class="relative mx-auto my-8 max-w-lg custom-alert">
+    <div class="bg-white rounded-lg shadow-xl">
+      <div class="flex items-center justify-between p-4 border-b">
+        <h5 class="text-xl font-semibold">{{ message?.subject }}</h5>
         <button
           type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
+          class="text-gray-400 hover:text-gray-600 focus:outline-none"
           aria-label="Close"
           (click)="close()"
-        ></button>
+        >
+          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
 
-      <div class="modal-body">
+      <div class="p-4">
         <p class="text-center confirm-message">{{ text }}</p>
 
-        <div class="p-1 confirm-button d-flex justify-content-between">
-          <button class="btn btn-{{ noButtonCss }}" (click)="close()">
+        <div class="p-1 confirm-button flex justify-between">
+          <button class="px-4 py-2 rounded font-medium transition-colors duration-200 bg-red-600 text-white hover:bg-red-700" (click)="close()">
             Отменить
           </button>
-          <button class="btn btn-{{ yesButtonCss }}" (click)="confirm()">
+          <button class="px-4 py-2 rounded font-medium transition-colors duration-200 bg-green-600 text-white hover:bg-green-700" (click)="confirm()">
             Да
           </button>
         </div>
