--- a/src/app/shared/components/field-error/field-error.component.html
+++ b/src/app/shared/components/field-error/field-error.component.html
@@ -1,17 +1,17 @@
-<div *ngIf="shouldShowError && errors" class="invalid-feedback d-block">
+<div *ngIf="shouldShowError && errors" class="text-red-600 text-sm mt-1 block">
   <div *ngIf="errors['required']">Значение обязательно.</div>
   <div *ngIf="errors['minlength']">Минимум 4 символа.</div>
   <div *ngIf="errors['ngbDate']">
     <span *ngIf="errors['ngbDate']!.invalid">Некорректная дата</span>
   </div>
   <div *ngIf="errors['dateRange']">
-    <p class="alert alert-danger small">
+    <p class="bg-red-50 border-l-4 border-red-400 p-2 text-red-800 rounded-lg text-sm">
       <strong>Дата "До" должна быть позже, чем "От".</strong> Пожалуйста,
       проверьте введенные данные.
     </p>
   </div>
   <div *ngIf="errors['yearRange']">
-    <p class="alert alert-danger small">
+    <p class="bg-red-50 border-l-4 border-red-400 p-2 text-red-800 rounded-lg text-sm">
       <strong>{{ errors["yearRangeError"] }}</strong>
     </p>
   </div>
