--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -7,7 +7,7 @@
 >
   <span
     *ngIf="waitingResponse"
-    class="spinner-border spinner-border-sm me-1"
+    class="animate-spin rounded-full h-4 w-4 border-2 border-white border-t-transparent inline-block mr-1"
     role="status"
     aria-hidden="true"
   ></span>
